modify log
